cart updates via server

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </div>
               <div id="color1"></div>
             </span>
-            <span data-shirt="Save my Trees" class="buy"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
+            <span id="0" data-shirt="Save my Trees" class="buy"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
             <div id="sold1">SOLD OUT</div>
           </footer>
           <section>
@@ -64,7 +64,7 @@
             </div>
             <div id="color2"></div>
           </span>
-          <span data-shirt="Nature Lover" class="buy"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
+          <span id="1" data-shirt="Nature Lover" class="buy"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
           <div id="sold2">SOLD OUT</div>
         </footer>
         <section>
@@ -95,7 +95,7 @@
             </div>
             <div id="color3"></div>
           </span>
-          <span data-shirt="Forrest Walk" class="buy"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
+          <span id="2" data-shirt="Forrest Walk" class="buy"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
           <div id="sold3">SOLD OUT</div>
         </footer>
         <section>
